# wulin-mud

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
docs/: action-types.md  architecture.md  llm-integration.md  npc-spec.md  ontology.md  roadmap.md  world-setting.md
scripts/: seed_world.py
tests/: test_smoke.py
tests/actions/: conftest.py  test_buy_item.py  test_decay_memories.py  test_drift_mood.py  test_executor.py  test_greet.py  test_interpretation_integration.py  test_move_to.py  test_offend_npc.py  test_talk.py
tests/cli/: conftest.py  test_repl.py
tests/eval/: test_assertions.py  test_cli.py  test_judge.py  test_runner.py
tests/eval/npc_consistency/sun_popo/: scenario_01_first_buy.yaml  scenario_02_aggressive_haggle.yaml  scenario_03_mention_husband.yaml  scenario_04_return_visitor.yaml  scenario_05_after_offense.yaml  scenario_06_inquire_about_son.yaml  scenario_07_knowledge_boundary.yaml  scenario_08_outsider_credit.yaml  scenario_09_dangerous_drug.yaml  scenario_10_long_absence.yaml
tests/llm/: test_dialogue_prompt.py  test_generate_dialogue.py  test_generate_interpretation.py  test_interpretation_prompt.py  test_memory_retrieval.py  test_provider.py
tests/ontology/: conftest.py  test_action_record.py  test_item.py  test_location.py  test_memory.py  test_npc.py  test_personality.py  test_relationship.py  test_rumor.py
tests/world/: test_seed.py  test_tick.py
wulin_mud/: __init__.py  __main__.py
wulin_mud/actions/: __init__.py  _helpers.py  base.py  buy_item.py  decay_memories.py  drift_mood.py  executor.py  greet.py  move_to.py  offend_npc.py  talk.py
wulin_mud/cli/: main.py  repl.py
wulin_mud/core/: __init__.py  enums.py
wulin_mud/eval/: __init__.py  __main__.py  assertions.py  cli.py  judge.py  runner.py  scenario.py
wulin_mud/llm/: __init__.py  dialogue.py  interpretation.py  provider.py
wulin_mud/llm/prompts/: __init__.py  dialogue.py  interpretation.py
wulin_mud/ontology/: __init__.py  action_record.py  item.py  location.py  memory.py  npc.py  personality.py  player_state.py  relationship.py  rumor.py  value_objects.py
wulin_mud/scripts/: __init__.py  seed_world.py
wulin_mud/world/: __init__.py  memory_retrieval.py  persistence.py  state.py  tick.py
wulin_mud/world/seed_data/items/: pharmacy.yaml
wulin_mud/world/seed_data/locations/: qinghe.yaml
wulin_mud/world/seed_data/npcs/: liu_niangzi.yaml  shen_xiansheng.yaml  sun_popo.yaml  wang_laojiu.yaml  zhao_zhanggui.yaml
